CP-104: Spacing fixes

--- a/frontend/src/main/webapp/app/sass/organisms/_site-footer.scss
+++ b/frontend/src/main/webapp/app/sass/organisms/_site-footer.scss
@@ -1,16 +1,21 @@
 .site-footer__container{
-  border-top: solid 15px $orange-3;
-  background-color: $gray-6;
+  border-top: solid 25px $orange-3;
   color: $gray-2;
   min-height: 200px;
 }
 
+.site-footer__menu{
+  margin-top: 15px;
+  background-color: $gray-6;
+  padding: 45px 0 60px;
+}
+
 .site-footer__info {
-  margin-top: 30px;
-  padding: 0 30px;
+  padding: 0 40px;
+  margin-bottom: 15px;
 
   @media (min-width: $screen-sm) {
-    margin: 30px 0;
+    float: left;
     min-height: 150px;
     border-bottom: 0;
     border-left: solid 1px $gray-4;
@@ -21,9 +26,17 @@
   }
 }
 
+.site-footer__info--social{
+  @media (min-width: $screen-sm) {
+    text-align: center;
+    padding: 0 60px;
+  }
+}
+
 .site-footer__media-image {
   display: inline-block;
   width: 40px;
+  margin: 0 5px;
 }
 
 .site-footer__link{
@@ -36,5 +49,6 @@
 
   a {
     color: $gray-2;
+    text-decoration: underline;
   }
 }
