--- a/frontend/src/main/webapp/app/sass/pages/_home.scss
+++ b/frontend/src/main/webapp/app/sass/pages/_home.scss
@@ -1,16 +1,20 @@
 .page-home {
-  margin: 0 auto 40px auto;
   top: 100px;
+  @media(min-width: $screen-md){
+    margin-bottom:60px;
+  }
 }
 
 .page-home__summary {
-  margin-top: 20px;
+  margin-top: 75px;
 }
 
 .page-home__summary-section{
 
   @media(min-width: $screen-md){
     border-right: solid 1px #CCC;
+    padding-left: 60px;
+    padding-right: 60px;
 
     &:last-child{
       border: none;
@@ -25,14 +29,14 @@
 
 .page-home__summary-header{
   text-align: center;
-  margin: 20px 0;
+  margin: 30px 0 15px;
   a {
     color: $orange-1;
   }
 }
 
 .page-home__summary-content{
-  margin-bottom: 40px;
+  margin-bottom: 60px;
   @media(min-width: $screen-md){
     min-height: 250px;
   }
